samples/_failures_safe/1761342465_4ff80b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a306b4d5.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_a306b4d5.c:147:5: error: expected expression at end of input
  147 |     if (
      |     ^~
./samples/SAFE/__tmp_a306b4d5.c:147:5: error: expected declaration or statement at end of input
